third_party/move/move-compiler-v2/tests/checking/typing/pack_reference.exp

Diagnostics:
error: reference type `&u64` is not allowed as a type argument (type was inferred)
  ┌─ tests/checking/typing/pack_reference.move:5:9
  │
2 │     struct Box<T> has drop { f: T }
  │                - declaration of type parameter `T`
  ·
5 │         Box { f: r_imm };
  │         ^^^
  │
  = required by instantiating type parameter `T` of struct `Box`

error: reference type `&mut u64` is not allowed as a type argument (type was inferred)
  ┌─ tests/checking/typing/pack_reference.move:6:9
  │
2 │     struct Box<T> has drop { f: T }
  │                - declaration of type parameter `T`
  ·
6 │         Box { f: r_mut };
  │         ^^^
  │
  = required by instantiating type parameter `T` of struct `Box`
